add spring boot starter Actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8090
+info.application.admin=rahmi
+info.application.user=aya
+info.application.manager=assia
+management.endpoints.web.exposure.include=*
